--- a/assets/main.css
+++ b/assets/main.css
@@ -12,11 +12,11 @@ tr * {
   z-index: 2;
 }
 
-tr:after {
-  @apply border border-white absolute top-0 left-0 bottom-0 right-0 rounded-lg;
-  content: "";
-  z-index: 1;
-}
+/*tr:after {*/
+/*  @apply border border-white absolute top-0 left-0 bottom-0 right-0 rounded-lg;*/
+/*  content: "";*/
+/*  z-index: 1;*/
+/*}*/
 
 thead tr:after {
   background: #F7F8FF;
